# ledger-ironfish-dkg

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  ledger_app.toml
.github/workflows/: coding_style_checks.yml  guidelines_enforcer.yml  main.yml  reusable_build.yml
app/: .gitignore  Cargo.toml  Makefile  Makefile.version  rust-toolchain.toml
app/.cargo/: config.toml
app/bin-app/: app.rs
app/src/: accumulator.rs  app_ui.rs  bolos.rs  context.rs  crypto.rs  handlers.rs  instructions.rs  ironfish.rs  lib.rs  main.rs  nvm.rs  rand.rs  status.rs  test_ui.rs  token.rs  token_info.rs  utils.rs
app/src/app_ui/: menu.rs  run_action.rs
app/src/crypto/: chacha20poly.rs  encryption_keys.rs  guards.rs  keys.rs  utils.rs
app/src/handlers/: dkg_backup_keys.rs  dkg_commitments.rs  dkg_get_identitites.rs  dkg_get_identity.rs  dkg_get_keys.rs  dkg_restore_keys.rs  dkg_round_1.rs  dkg_round_2.rs  dkg_round_3_min.rs  dkg_sign.rs  get_version.rs  review_tx.rs
app/src/ironfish/: constants.rs  errors.rs  multisig.rs  public_address.rs  sapling.rs  view_keys.rs
app/src/nvm/: buffer.rs  dkg_keys.rs  settings.rs
app/src/parser/: asset_identifier.rs  constants.rs  error.rs  merkle_note.rs  note.rs  transaction.rs  tx_version.rs
app/src/parser/snapshots/: ironfish_dkg__parser__transaction__review_transaction_test__tx_ui.snap  ledger_ironfish_dkg__parser__transaction__review_transaction_test__tx_ui.snap
app/src/parser/testvectors/: transaction_simple.json
app/src/parser/transaction/: burns.rs  mints.rs  outputs.rs  spends.rs
app/src/utils/: bip32.rs  int_format.rs
docs/: APDUSPEC.md
src/: accumulator.rs  bolos.rs  context.rs  crypto.rs  handlers.rs  instructions.rs  main.rs  parser.rs  status.rs  utils.rs
src/app_ui/: generic.rs  menu.rs  run_action.rs
src/chacha20poly/: constants.rs  decrypt.rs  encrypt.rs  key.rs
src/crypto/: chacha20poly.rs  encryption_keys.rs  epk.rs  key.rs  ovk.rs  utils.rs
src/handlers/: dkg_backup_keys.rs  dkg_commitments.rs  dkg_get_identity.rs  dkg_get_keys.rs  dkg_get_public_package.rs  dkg_nonces.rs  dkg_restore_keys.rs  dkg_round_1.rs  dkg_round_2.rs  dkg_round_3.rs  dkg_round_3_min.rs  dkg_sign.rs  get_result.rs
src/ironfish/: constants.rs  errors.rs  multisig.rs  public_address.rs  sapling.rs  view_keys.rs
src/nvm/: buffer.rs  dkg_keys.rs
src/parser/: asset_identifier.rs  error.rs  memo.rs  merkle_note.rs  note.rs  transaction.rs  tx_version.rs
src/parser/transaction/: burns.rs
src/utils/: bip32.rs  response.rs
tests_zemu/: package.json  try.mjs
tests_zemu/tests/: basic.test.ts  common.ts  dkg.test.ts  export.test.ts  failures.test.ts  identities.test.ts  restore.test.ts  sign.test.ts  utils.ts
