[package]
name = "ledger-ironfish-dkg"
version = "0.0.0" # The version is being taken from Makefile.version file
edition = "2021"

[[bin]]
name = "ledger-ironfish-dkg"
test = false
path = "bin-app/app.rs"

[dependencies]
ledger_device_sdk = { git = "https://github.com/Zondax/ledger-device-rust-sdk", rev = "89c2a12106b52a0fae8fbfde3eaab857378f962a", optional = true }
# ledger_device_sdk = { version="1.14.0" }
include_gif = "1.2.0"
serde = { version = "1.0.192", default_features = false, features = ["derive"] }
serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json-core" }
hex = { version = "0.4.3", default-features = false, features = [
    "serde",
    "alloc",
] }
numtoa = "0.2.4"
jubjub = { version = "0.10.0", default-features = false }
blake2b_simd = { version = "1.0.0", default-features = false }
blake2s_simd = { version = "1.0.0", default-features = false }
ff = "0.12.0"
group = "0.12.0"
chacha20poly1305 = "0.10.1"

ironfish-frost = { git = "https://github.com/Zondax/ironfish-frost.git", rev = "ded5722919ddfce3cfcd88fc8e7c24f2116a9a6a", default-features = false, features = [
    "dkg",
    "signing",
] }

getrandom = { version = "0.2", features = ["custom"] }
nom = { version = "7.1.3", default-features = false }
educe = { version = "0.6.0" }
arrayref = { version = "0.3.8", default-features = false }
aead = "0.5.2"
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
[profile.release]
# changed from z (default on template) to s in order to reduce stack size
# it will increase the binary size, but it is something we can afford here
opt-level = "s"
lto = true

# heap 15k, opt-level=z -> 3 participants fail on signing because of heap fragmentation, app size XXX
# heap 16.3k, opt-level=s -> 3 participants work, app size 680K

[features]
default = ["ledger"]
pending_review_screen = []
ledger = ["ledger_device_sdk"]

[package.metadata.ledger]
curve = ["ed25519"]
flags = "0"
path = ["44'/1338'"]
name = "Ironfish DKG"

[package.metadata.ledger.nanox]
icon = "nanox_icon.gif"

[package.metadata.ledger.nanosplus]
icon = "nanox_icon.gif"

[package.metadata.ledger.stax]
icon = "stax_icon.gif"

[package.metadata.ledger.flex]
icon = "stax_icon.gif"

# TODO: This change shouldn't be necessary, the ledger targets clearly define atomics as only supporting 32 not 64 (as seen in /opt/rustup/toolchains/1.75.0-aarch64-unknown-linux-musl/lib/rustlib/nanosplus/target.json)
# solve why this is happening rather than using modified radium
[patch.crates-io]
radium = { git = "https://github.com/iron-fish/radium", rev = "674c8faf1e74f931a58671f70586e6435353e9b6" }
