[package]
name = "ironfish-dkg"
version = "1.1.3" # This version is used by ledger to set the app version on deployment. The version displayed inside the main menu is set on app/.cargo/config.toml
edition = "2021"

[[bin]]
name = "ironfish-dkg"
test = false
path = "bin-app/app.rs"

[dependencies]
# ledger_device_sdk = { git = "https://github.com/Zondax/ledger-device-rust-sdk", rev = "446bd4c11c328e422e68f056b08ed38952a0853f", optional = true }
ledger_device_sdk = { version = "1.18.4", optional = true }
#ledger_device_sdk = { path="../ledger-device-rust-sdk/ledger_device_sdk" , optional = true}
include_gif = "1.2.0"
serde = { version = "1.0.192", default_features = false, features = ["derive"] }
serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json-core" }
hex = { version = "0.4.3", default-features = false, features = [
    "serde",
    "alloc",
] }
numtoa = "0.2.4"
jubjub = { version = "0.10.0", default-features = false }
blake2b_simd = { version = "1.0.0", default-features = false }
blake2s_simd = { version = "1.0.0", default-features = false }
ff = "0.12.0"
group = "0.12.0"
chacha20poly1305 = "0.10.1"

ironfish-frost = { git = "https://github.com/Zondax/ironfish-frost.git", rev = "ded5722919ddfce3cfcd88fc8e7c24f2116a9a6a", default-features = false, features = [
    "dkg",
    "signing",
] }

getrandom = { version = "0.2", features = ["custom"] }
nom = { version = "7.1.3", default-features = false }
educe = { version = "0.6.0" }
arrayref = { version = "0.3.8", default-features = false }
aead = "0.5.2"
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.5.0", default-features = false, features = [
    "spin_no_std",
] }
spin = { version = "0.9.8", default-features = false, features = [
    "spin_mutex",
], optional = true }
lexical-core = { version = "1.0.1", default-features = false, features = [
    "write-integers",
] }

[dev-dependencies]
lazy_static = { version = "1.5.0" }
insta = { version = "1", features = ["glob"] }
serde_json = "1.0.85"
rand = "0.8.5"
once_cell = "1.20.2"

[profile.release]
lto = true


[features]
default = ["ledger"]
ledger = ["ledger_device_sdk", "spin", "lazy_static/spin_no_std"]
# This will require to use zondax ledger device sdk, where zlog is added.
ledger-debug = ["ledger_device_sdk", "spin", "lazy_static/spin_no_std"]

[package.metadata.ledger]
curve = ["ed25519"]
flags = "0"
path = ["44'/1338'"]
name = "Ironfish DKG"

[package.metadata.ledger.nanox]
icon = "nanox_icon.gif"

[package.metadata.ledger.nanosplus]
icon = "nanox_icon.gif"

[package.metadata.ledger.stax]
icon = "stax_icon.gif"

[package.metadata.ledger.flex]
icon = "flex_icon.gif"

# TODO: This change shouldn't be necessary, the ledger targets clearly define atomics as only supporting 32 not 64 (as seen in /opt/rustup/toolchains/1.75.0-aarch64-unknown-linux-musl/lib/rustlib/nanosplus/target.json)
# solve why this is happening rather than using modified radium
[patch.crates-io]
radium = { git = "https://github.com/iron-fish/radium", rev = "674c8faf1e74f931a58671f70586e6435353e9b6" }
